提交代码 . 解决问题

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>heimao About us</title>
+    <script src="https://saas-1257030744.cos.ap-beijing.myqcloud.com/amazon_website/js/bootstrap.js"></script>
+    <script src="https://saas-1257030744.cos.ap-beijing.myqcloud.com/amazon_website/js/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://saas-1257030744.cos.ap-beijing.myqcloud.com/amazon_website/css/bootstrap.css">
+    <link rel="stylesheet" href="https://saas-1257030744.cos.ap-beijing.myqcloud.com/amazon_website/css/style.css">
+    <title>cangshu About us</title>
 
 </head>
 <body>
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <span class="logo">
-                    <a class="navbar-brand" href="index.html">heimao</a>
+                    <a class="navbar-brand" href="index.html">cangshu</a>
                 </span>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -47,11 +47,11 @@
     </div>
     <div class="text-p">
     <p>
-        heimao ERP (hereinafter referred to as “ERP”) was established in 2022, focusing on the operation of Amazon’s cross-border e-commerce platform. ERP focuses on a data analysis and efficient management tool for Amazon platform operations. ERP has been focusing since its establishment. Serving Amazon cross-border e-commerce, aiming to empower small and medium-sized e-commerce export companies to improve operational efficiency, improve store management and operation methods, and provide cross- border companies with in-depth data analysis, Amazon back-end management, and big data-driven business intelligence services
+        cangshu ERP (hereinafter referred to as “ERP”) was established in 2022, focusing on the operation of Amazon’s cross-border e-commerce platform. ERP focuses on a data analysis and efficient management tool for Amazon platform operations. ERP has been focusing since its establishment. Serving Amazon cross-border e-commerce, aiming to empower small and medium-sized e-commerce export companies to improve operational efficiency, improve store management and operation methods, and provide cross- border companies with in-depth data analysis, Amazon back-end management, and big data-driven business intelligence services
     </p>
     <p>ERP has a faster, scalable and secure e-commerce enterprise development that integrates and automates business processes, a higher level of digital transformation and application integration, which can realize automation and faster business processes across markets and online stores, and more Channel customer experience to realize business processes such as backstage management and data analysis.</p>
     </div>
-    
+
     <div class="text-p" style="font-size: 28px; font-weight: bold;">
 	    <p>
 	    Email: 1003230257@qq.com
@@ -64,7 +64,7 @@
 
 <!----copyright----->
 <div class="site-info copyright">
-    <a href="https://amazon.shidatuos.cn/">heimao | All Rights Reserved</a>
+    <a href="https://amazon.smallhamster.cn/">cangshu | All Rights Reserved</a>
 </div>
 </body>
 </html>
