--- a/pages/product-features.html
+++ b/pages/product-features.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>heimao Product Features</title>
+    <script src="https://saas-1257030744.cos.ap-beijing.myqcloud.com/amazon_website/js/bootstrap.js"></script>
+    <script src="https://saas-1257030744.cos.ap-beijing.myqcloud.com/amazon_website/js/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" href="https://saas-1257030744.cos.ap-beijing.myqcloud.com/amazon_website/css/bootstrap.css">
+    <link rel="stylesheet" href="https://saas-1257030744.cos.ap-beijing.myqcloud.com/amazon_website/css/style.css">
+    <title>cangshu Product Features</title>
 
 </head>
 <body>
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <span class="logo">
-                    <a class="navbar-brand" href="index.html">heimao</a>
+                    <a class="navbar-brand" href="index.html">cangshu</a>
                 </span>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -87,7 +87,7 @@
 
 <!----copyright----->
 <div class="site-info copyright">
-    <a href="https://amazon.shidatuos.cn/">heimao | All Rights Reserved</a>
+    <a href="https://amazon.smallhamster.cn/">cangshu | All Rights Reserved</a>
 </div>
 </body>
 </html>
